| Bug #4508 | CONVERT_TZ() function with new time zone as param crashes server. | ||
|---|---|---|---|
| Submitted: | 11 Jul 2004 11:25 | Modified: | 10 Aug 2004 19:44 |
| Reporter: | Dmitry Lenev | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.1.3 | OS: | Linux (Linux) |
| Assigned to: | Dmitry Lenev | Target Version: | |
[11 Jul 2004 11:25]
Dmitry Lenev
[10 Aug 2004 19:44]
Dmitry Lenev
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
ChangeSet 1.1936.7.1 2004/08/10 12:42:31 dlenev@brandersnatch.localdomain
Fix for bug #4508 "CONVERT_TZ() function with new time zone as param crashes server".
Instead of trying to open time zone tables during calculation of CONVERT_TZ() function
or setting of @@time_zone variable we should open and lock them with the rest of
statement's table (so we should add them to global table list) and after that use such
pre-opened tables for loading info about time zones.
