sql/item_create.h
@@ -31,7 +31,6 @@ Item *create_func_char_length(Item* a);
 Item *create_func_cast(Item *a, Cast_target cast_type, int len, CHARSET_INFO *cs);
 Item *create_func_connection_id(void);
 Item *create_func_conv(Item* a, Item *b, Item *c);
-Item *create_func_convert_tz(Item* a, Item *b, Item *c);
 Item *create_func_cos(Item* a);
 Item *create_func_cot(Item* a);
 Item *create_func_crc32(Item* a);
