sql/tztime.h
@@ -59,7 +59,8 @@ public:
 
 extern Time_zone * my_tz_UTC;
 extern Time_zone * my_tz_SYSTEM;
-extern Time_zone * my_tz_find(THD *thd, const String *name);
+extern TABLE_LIST * my_tz_get_table_list(THD *thd);
+extern Time_zone * my_tz_find(const String *name, TABLE_LIST *tz_tables);
 extern my_bool     my_tz_init(THD *org_thd, const char *default_tzname, my_bool bootstrap);
 extern void        my_tz_free();
 
